--- a/src/styles.css
+++ b/src/styles.css
@@ -14,20 +14,37 @@ main {
   width: 50%;
   padding: 20px;
 }
-
+main.h2{
+	text-align: center
+}
+div.mainleft {
+	display: inline;
+	float: left;
+	width:40%;
+	margint-right:5%;
+}
+div.mainright {
+	display: inline;
+	width:40%;
+	float: right;
+	margin-left:5%;
+}
+div.logo {
+	display: inline;
+	float:left;
+}
 main > h1 {
   text-align: center;
   font-size: 3.5em;
 }
-#mainmenu {
-  background-color:#eeeeee;
+#mainmenu, #loginmenu {
   display: inline;
   float:left;
 }
 #loginmenu {
   float:right;
 }
-ul.menu li, ul.login li  {
+ul.menu li, ul.login li {
   display: inline;
   margin-right:60px;
 }
