--- a/src/styles.css
+++ b/src/styles.css
@@ -15,8 +15,13 @@ main {
   padding: 20px;
 }
 main.h2{
-	text-align: center
+	text-align: center;
 }
+
+main.img {
+	
+}
+
 div.mainleft {
 	display: inline;
 	float: left;
