--- a/src/styles.css
+++ b/src/styles.css
@@ -14,12 +14,8 @@ main {
   width: 50%;
   padding: 20px;
 }
-main.h2{
+h2{
 	text-align: center;
-}
-
-main.img {
-	
 }
 
 div.mainleft {
@@ -27,6 +23,14 @@ div.mainleft {
 	float: left;
 	width:40%;
 	margin-right:5%;
+}
+div.mainleft.img {
+	max-width:600px;
+	text-align:center;
+}
+div.mainleft.img {
+	max-width:600px;
+	text-align:center;
 }
 div.mainright {
 	display: inline;
@@ -56,7 +60,4 @@ ul.menu li, ul.login li {
 mainbody.h2 {
 	text-align:center;
 }
-mainbody.img{
-	max-width:50%;
-	text-align:center;
-}
+
