--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@ div.mainleft.img {
 	max-width:600px;
 	text-align:center;
 }
-div.mainleft.img {
+div.mainright.img {
 	max-width:600px;
 	text-align:center;
 }
