--- a/src/styles.css
+++ b/src/styles.css
@@ -28,12 +28,12 @@ div.mainleft {
 	width:40%;
 	margin-right:5%;
 }
-div.mainleft.img {
+div.mainleft img {
 	width:100%
 	max-width:100%;
 	text-align:center;
 }
-div.mainright.img {
+div.mainright img {
 	width:100%;
 	max-width:100%;
 	text-align:center;
