--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ main {
   margin: auto;
   width: 80%;
   padding: 20%;
+	padding-bottom:40%;
 }
 
 heading.img {
@@ -33,13 +34,15 @@ div.mainleft img {
     width: 400px;
     max-width: 100%;
     text-align: center;
-	padding:10%;
+    padding-left: 20%;
+    padding-right: 20%;
 }
 div.mainright img {
 	width:100%;
 	max-width:400px;
 	text-align:center;
-	padding:10%;
+    padding-left: 20%;
+    padding-right: 20%;
 }
 div.mainright {
 	display: inline;
