--- a/src/styles.css
+++ b/src/styles.css
@@ -79,7 +79,8 @@ img {
 text-align:center !important;	
 }
 a.LearnMore {
-	background-color:#9BEE30;
+	background-color:#3088F5;
+	color:#000000;
 	padding:10px;
 	text-decoration: none
 }
