--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,16 @@ heading img {
 	width:100% !important;
 	padding-bottom:3%;
 }
+
+.logo {
+	max-width:20%;	
+}
+
+.Logo img {
+	max-width:100%;
+	max-height:100%;
+}
+
 h2{
 	text-align: center;
 }
