--- a/src/styles.css
+++ b/src/styles.css
@@ -40,7 +40,8 @@ div.mainleft {
 	display: inline;
 	float: left;
 	width:40%;
-	Padding-left:1.2%;
+	Padding-left:20%;
+	padding-right:40%
 	padding-bottom:3%;
 }
 div.middleColumn { 
@@ -56,7 +57,8 @@ div.mainleft img, div.mainright img {
 div.mainright {
 	display: inline;
 	width:40%;
-	Padding-right:1.2%;
+	Padding-right:20%;
+	padding-left: 40%;
 	float: right;
 	padding-bottom:3%;
 }
